@@ -6,73 +6,78 @@ import java.util.List;
 import java.util.Random;
 
 /**
- * This class handles the lottery functionality
+ * Handles the lottery logic for selecting event participants
+ * from a waitlist, drawing replacements, and sending notifications.
  */
 public class Lottery {
 
     private final Random random;
     private final NotificationSender notificationSender;
 
+    /** Default constructor for production usage */
     public Lottery() {
-        this.random = new Random();
-        this.notificationSender = new NotificationSender();
+        this(new Random(), new NotificationSender());
     }
-    // Test constructor
-    public Lottery(NotificationSender notificationSender) {
-        this.random = new Random();
-        this.notificationSender = notificationSender;
+
+    /** Test constructor (Dependency Injection) */
+    public Lottery(NotificationSender sender) {
+        this(new Random(), sender);
+    }
+
+    /** Full test constructor */
+    public Lottery(Random random, NotificationSender sender) {
+        this.random = random;
+        this.notificationSender = sender;
     }
 
     /**
-     * Draw winners automatically based on the event's totalSpots value.
+     * Draw winners for the event based on available spots.
+     * Moves winners from waitList → selectedList.
      *
-     * @param event The event to run the lottery on
-     * @return List of selected winner IDs
+     * @param event The event to process
+     * @return Independent list of winner user IDs
      */
     public List<String> drawWinners(Event event) {
         ArrayList<String> waitList = event.getWaitList();
         ArrayList<String> selectedList = event.getSelectedList();
 
         if (waitList == null || waitList.isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
 
-        // Use totalSpots as the number of winners to draw (or entrantsLimit if preferred)
-        int numberOfWinners = (int) event.getTotalSpots();
+        int totalSpots = (int) event.getTotalSpots();
+        int spotsRemaining = totalSpots - selectedList.size();
 
-        //Added in because the lottery was giving double the total spots
-        int spotsRemaining = (int) (event.getTotalSpots() - selectedList.size());
         if (spotsRemaining <= 0) {
-            return Collections.emptyList();
+            return List.of();
         }
 
-
-        // Ensure we do not exceed the number of available entrants
         int winnersToPick = Math.min(spotsRemaining, waitList.size());
 
-        ArrayList<String> shuffledList = new ArrayList<>(waitList);
-        Collections.shuffle(shuffledList, random);
+        // Shuffle a working copy
+        ArrayList<String> shuffled = new ArrayList<>(waitList);
+        Collections.shuffle(shuffled, random);
 
-        //Added in a losers list too for notifications to be sent out
-        List<String> winners = shuffledList.subList(0, winnersToPick);
-        List<String> losers = shuffledList.subList(winnersToPick, shuffledList.size());
+        // Safe copies of winners/losers
+        List<String> winners = new ArrayList<>(shuffled.subList(0, winnersToPick));
+        List<String> losers  = new ArrayList<>(shuffled.subList(winnersToPick, shuffled.size()));
 
+        // Update event state
         selectedList.addAll(winners);
-        event.getFinalList().addAll(winners);
         waitList.removeAll(winners);
 
-        // Notify winners and losers of their fate
+        // Notifications
         sendWinnerNotifications(event, winners);
         sendLoserNotifications(event, losers);
 
-        return new ArrayList<>(winners);
+        return winners;
     }
 
     /**
-     * Draw a replacement winner if someone declines and notify them.
+     * Draws a single replacement winner if available.
      *
-     * @param event The event to draw a replacement from
-     * @return ID of the replacement winner, or null if none available
+     * @param event The event to update
+     * @return Replacement winner ID, or null if none available
      */
     public String drawReplacement(Event event) {
         ArrayList<String> waitList = event.getWaitList();
@@ -82,51 +87,43 @@ public class Lottery {
             return null;
         }
 
+        // Randomly pick a replacement
         int index = random.nextInt(waitList.size());
         String winner = waitList.get(index);
 
-        // Update event lists
         selectedList.add(winner);
-        event.getFinalList().add(winner);
         waitList.remove(index);
 
-        // Send notification to replacement winner
         sendWinnerNotifications(event, Collections.singletonList(winner));
-
         return winner;
     }
 
-    /**
-     * Helper function to send notifications to a list of winners
-     *
-     * @param event   The event for context
-     * @param winners List of winner IDs
-     */
+
+
     private void sendWinnerNotifications(Event event, List<String> winners) {
-        String message = "Congratulations! You have been selected for the event: " + event.getEventName();
+        if (winners == null || winners.isEmpty()) return;
 
-        ArrayList<String> receiversIds = new ArrayList<>(winners);
+        String message = "Congratulations! You have been selected for the event: "
+                + event.getEventName();
 
-        // Send notification using NotificationSender
-        notificationSender.sendNotification(CurrentUser.get().getUserId(), message, receiversIds);
+        notifyUsers(event, message, winners);
     }
 
-    /**
-     * Notify participants who were not selected.
-     *
-     * @param event   The event for context
-     * @param losers  List of loser IDs
-     */
     private void sendLoserNotifications(Event event, List<String> losers) {
-        if (losers == null || losers.isEmpty()) {
-            return;
-        }
+        if (losers == null || losers.isEmpty()) return;
 
-        String message = "Unfortunately, you were not selected for the event: " + event.getEventName()
-                + ". Thank you for your interest.";
+        String message = "Unfortunately, you were not selected for the event: "
+                + event.getEventName() + ". Thank you for your interest.";
 
-        ArrayList<String> receiversIds = new ArrayList<>(losers);
+        notifyUsers(event, message, losers);
+    }
 
-        notificationSender.sendNotification(CurrentUser.get().getUserId(), message, receiversIds);
+    private void notifyUsers(Event event, String message, List<String> userIds) {
+        ArrayList<String> receivers = new ArrayList<>(userIds);
+        String senderId = event.getOwnerId(); // should grab owner's ID for message now
+
+        //String senderId = CurrentUser.get().getUserId();
+
+        notificationSender.sendNotification(senderId, message, receivers);
     }
 }
